--- a/api.html
+++ b/api.html
@@ -25,8 +25,8 @@
         <li>DESCRIPCION: Obtener un usuario</li>
         <li>
           URL:
-          <a href="http://www.local.test/webservice/webservice.php?user=1">
-            http://www.local.test/webservice/webservice.php?user=1</a
+          <a href="/webservice/webservice.php?user=1">
+            /webservice/webservice.php?user=1</a
           >
         </li>
         <li>METODO: GET</li>
